# hpc

./: .gitignore  Dockerfile  README.md  hpc.job  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
jobs/: build.job  gpu.job  jupyter.job  llm.job  parallel.job  setup.job
src/: __init__.py  dataset.py  model.py  train.py  utils.py
